--- a/ApplianceStatusStore/src/main/resources/application.properties
+++ b/ApplianceStatusStore/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+server.port=8080
 
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/appliance_status?serverTimezone=UTC&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=electrolux
+
+## Hibernate properties
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.open-in-view=false
+# case-sensitive Table names in the Entity annotations
+spring.jpa.hibernate.naming.physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# Flyway Migration properties
+spring.flyway.enabled=true
+spring.flyway.schemas=appliance_status
+spring.flyway.url=jdbc:mysql://127.0.0.1:3306?serverTimezone=UTC&useSSL=false
+spring.flyway.user=root
+spring.flyway.password=electrolux
+spring.flyway.group=true
+spring.flyway.clean-disabled = true
