Added Scheduled Service and Integration Test

--- a/ApplianceStatusStore/build.gradle
+++ b/ApplianceStatusStore/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.awaitility:awaitility:4.2.0'
 }
 
 tasks.named('test') {
