--- a/ApplianceStatusStore/src/main/resources/application.properties
+++ b/ApplianceStatusStore/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.flyway.user=root
 spring.flyway.password=electrolux
 spring.flyway.group=true
 spring.flyway.clean-disabled = true
+
+
+statusupdater.fixedDelay.in.milliseconds=10
