--- a/Appliance/app/build.gradle
+++ b/Appliance/app/build.gradle
@@ -10,17 +10,16 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id "com.github.johnrengelman.shadow" version "7.1.2"
 }
+
+sourceCompatibility = '11'
 
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
 
-dependencies {
-    // This dependency is used by the application.
-    implementation 'com.google.guava:guava:30.1.1-jre'
-}
 
 testing {
     suites {
