--- a/ApplianceStatusStore/src/main/resources/application.properties
+++ b/ApplianceStatusStore/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/appliance_status?serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/appliance_status?serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=electrolux
 ## Hibernate properties
@@ -11,7 +11,7 @@ spring.jpa.hibernate.naming.physical-strategy:org.hibernate.boot.model.naming.Ph
 # Flyway Migration properties
 spring.flyway.enabled=true
 spring.flyway.schemas=appliance_status
-spring.flyway.url=jdbc:mysql://127.0.0.1:3306?serverTimezone=UTC&useSSL=false
+spring.flyway.url=jdbc:mysql://host.docker.internal:3306?serverTimezone=UTC&useSSL=false
 spring.flyway.user=root
 spring.flyway.password=electrolux
 spring.flyway.group=true
